Fix T92185: GPencil memory leak removing stroke from python

The API was not removing the weights, points and traingulation data. Only it was removing the stroke itself.